# Ariane

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: bin.rs  lib.rs
src/commands/: download.rs  info.rs  mod.rs  recover.rs
src/compilation/: compile.rs  mod.rs
src/functions_utils/: mod.rs  search.rs
src/info_gathering/: compiler.rs  krate.rs  mod.rs
src/sig/: comparaison.rs  mod.rs  sig_generation.rs
src/utils/: export.rs  mod.rs  toml_utils.rs
test/: Cargo.toml
test/src/: main.rs
tools/: IDA_extract_functions.idc  IDA_extract_functions.py  output_to_idc.py
