[package]
name = "ariane"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/N0fix/ariane"
authors = ["Nofix"]
keywords = ["strip", "ctf", "symbol", "rust"]
readme = "README.md"
description = "Rust tool to recover symbols from release compiled executables"

[dependencies]
crates_io_api = "0.8.1"
clap = { version = "4.4.1", features = ["derive"] }
flate2 = "1.0.27"
regex = "1.9.4"
reqwest = "0.11.20"
semver = "1.0.18"
tar = "0.4.40"
goblin = "0.7.1"
fuzzyhash = "0.2.2"
hex = "0.4.3"
smda = "0.2.5"
json = "0.12.4"
serde_json = "1.0.105"
serde = "1.0.188"
pdb = "0.8.0"
itertools = "0.11.0"

[dependencies.iced-x86]
version = "1.20.0"
default-features = false
features = ["std", "decoder", "masm"]

[lib]
name = "ariane"
path = "src/lib.rs"

[[bin]]
name = "ariane"
path = "src/bin.rs"
