[package]
name = "ariane"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/N0fix/ariane"
authors = ["Nofix"]
keywords = ["strip", "reverse-engineering", "symbol", "rust"]
readme = "README.md"
description = "Rust tool to recover symbols from release compiled executables"

[dependencies]
crates_io_api = "0.8.1"
clap = { version = "4.4.1", features = ["derive"] }
flate2 = "1.0.27"
regex = "1.9.4"
reqwest = "0.11.20"
semver = "1.0.18"
tar = "0.4.40"
goblin = "0.7.1"
fuzzyhash = "0.2.2"
hex = "0.4.3"
json = "0.12.4"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
pdb = "0.8.0"
itertools = "0.11.0"
toml_edit = { version = "0.19.14", features = ["serde"] }
indicatif = "0.17.6"
object = "0.32.1"
env_logger = "0.10.0"
log = "0.4.20"

[dependencies.iced-x86]
version = "1.20.0"
default-features = false
features = ["std", "decoder", "masm"]

[lib]
name = "ariane"
path = "src/lib.rs"

[[bin]]
name = "ariane"
path = "src/bin.rs"
